@@ -85,6 +85,7 @@ typedef struct _mosquitto_client_msg{
 	struct mosquitto_msg_store *store;
 	uint16_t mid;
 	int qos;
+	bool retain;
 	time_t timestamp;
 	enum mosquitto_msg_direction direction;
 	enum mqtt3_msg_state state;
@@ -251,7 +252,7 @@ void mqtt3_db_limits_set(int inflight, int queued);
 /* Return the number of in-flight messages in count. */
 int mqtt3_db_message_count(int *count);
 int mqtt3_db_message_delete(mqtt3_context *context, uint16_t mid, enum mosquitto_msg_direction dir);
-int mqtt3_db_message_insert(mqtt3_context *context, uint16_t mid, enum mosquitto_msg_direction dir, enum mqtt3_msg_state state, int qos, struct mosquitto_msg_store *stored);
+int mqtt3_db_message_insert(mqtt3_context *context, uint16_t mid, enum mosquitto_msg_direction dir, enum mqtt3_msg_state state, int qos, bool retain, struct mosquitto_msg_store *stored);
 int mqtt3_db_message_release(mosquitto_db *db, mqtt3_context *context, uint16_t mid, enum mosquitto_msg_direction dir);
 int mqtt3_db_message_update(mqtt3_context *context, uint16_t mid, enum mosquitto_msg_direction dir, enum mqtt3_msg_state state);
 int mqtt3_db_message_write(mqtt3_context *context);
